adds voting php and updates text on not-started page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 				<h3>Mark your calendars!</h3>
 				<p>We will start accepting photos for our 2nd annual Cutest Pet Contest beginning April 18th.</p>
 				<p>No entry fee, $1 to vote and great prizes.</p>
+				<p>Grand Prize is a 16X20 head and chest acrylic, hand painted portrait by Allen Holloway, Quad Cities animal and wildlife artist.   <a href="http://www.artbyallenholloway.com" target="_blank">http://www.artbyallenholloway.com</a></p>
+			  <p>The top Dog and Cat will revieve a $100 gift card to Mallard Pointe Kennels</p>
 				<p>All proceeds go to QCPAWS to help the homeless animals in our community!</p>
 			</div>
 
